--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 </head>
 <body>
     <h1>Book Your Session</h1>
-    <form id="playerForm" netlify-honeypot="bot-field" data-netlify="true">
+    <form id="playerForm" name="playerForm" netlify-honeypot="bot-field" data-netlify="true">
+        <input type="hidden" name="form-name" value="playerForm">
         <p class="hidden">
             <label>Don't fill this out if you're human: <input name="bot-field"></label>
         </p>
@@ -164,7 +165,7 @@
                 });
                 
                 // Submit to Netlify Forms (for data collection)
-                fetch('/', {
+                await fetch('/', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
                     body: new URLSearchParams(netlifyForm).toString()
